k8s/math-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: math
  namespace: prism
spec:
  selector:
    app: math
  ports:
    - port: 9000
      targetPort: 9000
